[package]
name = "ctlogs"
version = "0.1.0"
authors = [ "Stephen OBrien <wayofthepie@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
anyhow = "1.0.40"
async-nats = "0.9.18"
async-trait = "0.1.50"
base64 = "0.13.0"
der-parser = "6.0.0"
env_logger = "0.9.0"
futures = "0.3.15"
http = "0.2.4"
log = "0.4.14"
reqwest = { version = "0.11.6", features = [ "json", "stream", "native-tls-vendored" ] }
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.13.0", features = [ "rt-multi-thread", "macros", "io-util", "fs", "signal" ] }
x509-parser = "0.12.0"

[dev-dependencies]
wiremock = "0.5.7"
